--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <img src="img/setup-telescope-2.jpg" alt="Telescopio Secundario">
                     <div class="setup-item-info">
                         <h3>Telescopio Secundario</h3>
-                        <p>Aquí va el nombre de tu otro telescopio</p>
+                        <p>Newton Celestron 130SLT</p>
                     </div>
                 </div>
                 <div class="setup-item">
